<resources>
    <string name="app_name">HW05</string>
    <string name="temp">Temperature:</string>
    <string name="maxtemp">Temperature Max:</string>
    <string name="mintemp">Temperature Min:</string>
    <string name="description">Description:</string>
    <string name="humidity">Humidity:</string>
    <string name="windspeed">Wind Speed:</string>
    <string name="winddegree">Wind Degree:</string>
    <string name="cloudiness">Cloudiness:</string>
    <string name="weatherForecast">Check Weather Forecast</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
</resources>